# myas

./: .gitignore  justfile  pyproject.toml
examples/: async_iter_utils.py  example_closeable_queue.py  procs.py  rich_managers.py  rich_managers_ex.py  worker_managers.py
myas/: __init__.py  buf.py  closeable_queue.py  processor.py  protocols.py  stream.py  workers.py
myas/_experimental/: context managers for wiring functions.md  create_subprocess.py  ctx_rewriter.py  dec.py  instrumented_aiter.py  instrumented_aiter_bypass.py  pipe_vs_stream.ipynb  procpipe.py  streamer.py  streamer2.py
myas/utils/: __init__.py  aiter_utils.py  compose.py  misc.py  pipe.py
tests/: test_aiter_utils.py  test_queues.py
