[tool.poetry]
name = "myas"
version = "0.1.0"
description = ""
authors = ["Pedro Batista <pedrovhb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
rich = {version = "^12.6.0", optional = true}
prompt_toolkit = {version = "^3.0.31", optional = true}
humanize = {version = "^4.4.0", optional = true}
line-profiler-pycharm = "^1.1.0"

[tool.poetry.dev-dependencies]
black = {extras = ["d"], version = "^22.8.0"}
isort = "^5.10.1"
parse = "^1.19.0"

# Specify extras
pycrunch-engine = "^1.4"
pytest-asyncio = "^0.20.1"
pytest = "^7.1.3"
hypothesis = "^6.56.3"
bump2version = "^1.0.1"
flake8 = "^5.0.4"
jupyterlab = "^3.4.8"
httpx = "^0.23.0"
mypy = "^0.982"
parsel = "^1.6.0"
[tool.poetry.extras]
all = ["rich", "prompt_toolkit", "humanize"]
rich = ["rich", "prompt_toolkit", "humanize"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
strict = true
show_error_codes = true
show_traceback = true

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ['py310']
